--- a/themes/perevozkin/sass/_common1.scss
+++ b/themes/perevozkin/sass/_common1.scss
@@ -68,7 +68,7 @@
 .c_71a72c { @extend %c_71a72c; }
 .c_757575 { @extend %c_757575; }
 .c_8e95a1 { @extend %c_8e95a1; }
-.c_96a5b8 { @extend %c_96a5b8; }
+.c_96a5b8 { @extend %c_96a5b8; &:hover {@extend %c_96a5b8;}}
 .c_aab1ba { @extend %c_aab1ba; }
 .c_c3c8cd { @extend %c_c3c8cd; }
 .c_cbe0eb { @extend %c_cbe0eb; }
@@ -104,6 +104,9 @@ a.c_71a72c, a.c_71a72c:hover, a.c_71a72c:focus { @extend %c_71a72c; }
 
 .m-0-5 { margin: 0 5px; }
 .m-0-15 { margin: 0 15px; }
+.m-0-20 { margin: 0 20px; }
+
+.m-20-0 { margin: 20px 0; }
 
 .mb-5 { margin-bottom: 5px; }
 .mb-10 { margin-bottom: 10px; }
@@ -182,6 +185,9 @@ a.c_71a72c, a.c_71a72c:hover, a.c_71a72c:focus { @extend %c_71a72c; }
 
 .bb-dotted-3 { border-bottom: 1px dotted #96a5b8; }
 .bb-dotted-3-h { @extend .bb-dotted-3; &:hover { border-bottom: none; } }
+
+.bb-dotted-4 { border-bottom: 1px dotted #1e90d9; }
+.bb-dotted-4-h { @extend .bb-dotted-4; &:hover { border-bottom: none; } }
 
 .br-none { border-right: none; }
 
