--- a/themes/perevozkin/sass/_my-requests.scss
+++ b/themes/perevozkin/sass/_my-requests.scss
@@ -145,7 +145,7 @@
 	.col41 {
 		width: 25%;
 	}
-	
+		
 	.col51 {
 		width: 25%;
 	}
@@ -155,6 +155,21 @@
 	}
 	
 }
+
+.col21-g {
+	width: 32%;
+}
+
+.col41-g {
+	width: 31%;
+}
+
+.col51-g {
+	width: 31%;
+	border-right: none !important;
+}
+
+
 
 .review-perevoz-ttl {
 	width: 77px;
