--- a/themes/perevozkin/sass/_requests-list.scss
+++ b/themes/perevozkin/sass/_requests-list.scss
@@ -8,7 +8,7 @@
 //	}
 	
 	.numb {
-		margin-left: 50px;
+		margin-left: 25px;
 	}
 	
 	.info {
@@ -71,7 +71,7 @@
 
 .requests-list-item_number {
 	padding: 52px 0 0 0;
-	margin: 0 29px 0 0;
+	margin: 0 40px 0 0;
 	
 //	@extend %for_sprite;
 //	@extend %font_12;
@@ -191,7 +191,7 @@
 	width: 145px;
 	margin-right: 15px;
 	
-	span,
+	& > span,
 	a {
 		padding-left: 25px;
 //		@extend %db;
