--- a/themes/perevozkin/sass/_placeholders.scss
+++ b/themes/perevozkin/sass/_placeholders.scss
@@ -24,6 +24,7 @@
 %c_757575 { color: #757575; }
 %c_8093a9 { color: #8093a9; }
 %c_85bf32 { color: #85bf32; }
+%c_8ec0d6 { color: #8ec0d6; }
 %c_8e95a1 { color: #8e95a1; }
 %c_96a5b8 { color: #96a5b8; }
 %c_aab1ba { color: #aab1ba; }
