--- a/themes/perevozkin/sass/_common1.scss
+++ b/themes/perevozkin/sass/_common1.scss
@@ -231,3 +231,5 @@ a.c_71a72c, a.c_71a72c:hover, a.c_71a72c:focus { @extend %c_71a72c; }
 .border-box	{ @extend %border_box; }
 
 .pointer { @extend %pointer; }
+
+.v-middle{ vertical-align: middle; }
