--- a/themes/perevozkin/sass/screen.scss
+++ b/themes/perevozkin/sass/screen.scss
@@ -73,6 +73,7 @@ $btns-layout: vertical;
 @import "_bid-item-detail";
 @import "_kak-rabotaet-sait";
 @import "_transport-form";
+@import "_main-page-cats";
 
 
 @import "_header";
