--- a/js/formstyler/jquery.formstyler.css
+++ b/js/formstyler/jquery.formstyler.css
@@ -132,6 +132,7 @@
 	-khtml-border-radius: 3px;
 	border-radius: 3px;
 	color: #2e3c54;
+	background-color: #fff;
 }
 /*
 .jq-selectbox__select:hover {
